<resources>
    <string name="app_name">London News</string>

    <string name="news_image_description">Thumbnail related to news article</string>

    <string name="news_headline">News Headline</string>
    <string name="author">Author</string>
    <string name="example_date">08 June 2017</string>
    <string name="section">Section</string>

    <string name="no_internet_connection">No Internet Connection</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>

    <!-- Setting Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>

    <!-- Strings For Order Preference [CHAR LIMIT=30] -->
    <string name="settings_order_label">Order By</string>
    <string name="settings_order_key" translatable="false">@string/settings_order_by_most_recent_value</string>
    <string name="settings_order_default" translatable="false">@string/settings_order_by_relevance_value</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>

    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>

    <string name="no_articles_found">No News Articles found.</string>


</resources>
