<?xml version="1.0" encoding="utf-8"?>

<!-- dp layout heights and widths not in dimens.xml due to compiler complaints -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/CardStyle"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/margin_bottom_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                >

                <ImageView
                    android:id="@+id/news_image"
                    style="@style/CardImageView"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:contentDescription="@string/news_image_description"
                    tools:src="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/text_news_info"
                style="@style/TextNewsInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <TextView
                    android:id="@+id/news_title"
                    style="@style/TitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/news_headline" />

                <TextView
                    android:id="@+id/news_author"
                    style="@style/AuthorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/author" />


                <TextView
                    android:id="@+id/news_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/example_date"
                    android:paddingTop="8dp"/>

                <TextView
                    android:id="@+id/news_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    tools:text="@string/section"
                    android:paddingTop="16dp"/>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>